--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "Mackewinsson P.",
   "license": "ISC",
   "dependencies": {
     "chalk": "^4.0.0",
     "cheerio": "^1.0.0-rc.3",
+    "gif-frames": "^1.0.1",
+    "iconv-lite": "^0.5.1",
     "json2csv": "^5.0.0",
     "request": "^2.88.2",
-    "request-promise": "^4.2.5"
+    "request-promise": "^4.2.5",
+    "tesseract.js": "^2.1.1"
   }
 }
