--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "chalk": "^4.0.0",
     "cheerio": "^1.0.0-rc.3",
-    "gif-frames": "^1.0.1",
     "iconv-lite": "^0.5.1",
     "json2csv": "^5.0.0",
+    "puppeteer": "^3.3.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
     "tesseract.js": "^2.1.1"
