--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chalk": "^4.0.0",
     "cheerio": "^1.0.0-rc.3",
+    "express": "^4.17.1",
     "iconv-lite": "^0.5.1",
     "json2csv": "^5.0.0",
     "puppeteer": "^3.3.0",
