--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
-  "name": "yapowebscraper",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "client500scraper",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start": "node index.js"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
-  "author": "Mackewinsson P.",
-  "license": "ISC",
   "dependencies": {
-    "chalk": "^4.0.0",
     "cheerio": "^1.0.0-rc.3",
-    "express": "^4.17.1",
-    "iconv-lite": "^0.5.1",
-    "json2csv": "^5.0.0",
-    "puppeteer": "^3.3.0",
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "json2csv": "^5.0.1",
+    "mongoose": "^5.9.29",
+    "morgan": "~1.9.1",
+    "node-cron": "^2.0.3",
+    "nodemailer": "^6.4.11",
+    "puppeteer": "^5.2.1",
     "request": "^2.88.2",
-    "request-promise": "^4.2.5",
+    "request-promise": "^4.2.6",
     "tesseract.js": "^2.1.1"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0",
+    "nodemon": "^2.0.4"
   }
 }
