--- a/.gitignore
+++ b/.gitignore
@@ -54,7 +54,7 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
+# dot environment variables file
 .env
 
 # next.js build output
