--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
     "cheerio": "^1.0.0-rc.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "mongoose": "^5.10.0",
     "puppeteer": "^5.2.1",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "tesseract.js": "^2.1.1"
   },
-  "devDependencies": {
-    "dotenv": "^8.2.0",
-    "nodemon": "^2.0.4"
-  }
+  "devDependencies": {}
 }
