--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
+    "iconv-lite": "^0.6.2",
     "mongoose": "^5.10.0",
     "puppeteer": "^5.2.1",
     "request": "^2.88.2",
