--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "client500scraper",
+  "name": "client500-scrapers",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node ./bin/www"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
+    "express": "~4.16.1",
     "iconv-lite": "^0.6.2",
     "mongoose": "^5.10.0",
+    "morgan": "~1.9.1",
+    "node-cron": "^2.0.3",
     "puppeteer": "^5.2.1",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "tesseract.js": "^2.1.1"
-  },
-  "devDependencies": {}
+  }
 }
