--- a/package.json
+++ b/package.json
@@ -3,16 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
     "dotenv": "^8.2.0",
-    "express": "~4.16.1",
     "iconv-lite": "^0.6.2",
     "mongoose": "^5.10.0",
-    "morgan": "~1.9.1",
     "node-cron": "^2.0.3",
     "puppeteer": "^5.2.1",
     "request": "^2.88.2",
