--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node app"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
     "iconv-lite": "^0.6.2",
     "mongoose": "^5.10.0",
