--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongoose": "^5.10.0",
     "node-cron": "^2.0.3",
     "puppeteer": "^5.2.1",
+    "puppeteer-core": "^1.11.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "tesseract.js": "^2.1.1"
