--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
     "iconv-lite": "^0.6.2",
+    "json2csv": "^5.0.3",
     "mongoose": "^5.10.0",
     "node-cron": "^2.0.3",
     "puppeteer": "^5.2.1",
